Implement employee leaves management and integrate with time tracking expected hours calculation, enhance workspace memberships with active status and timestamps, and refactor members API to support paginated search and member updates.